[package]
name = "mpu6050"
version = "0.1.5"
authors = ["Julian Gaal <gjulian@uos.de>"]
edition = "2018"

description = "Platform agnostic driver for MPU6050 6-axis IMU"
repository = "https://github.com/juliangaal/mpu6050"
readme = "README.md"
keywords = ["mpu6050", "imu", "embedded"]
license = "MIT"

[dependencies]
embedded-hal = "0.2.7"
libm = "0.2.2"

[dependencies.nalgebra]
default-features = false
version = "0.31.0"

[dev-dependencies]
i2cdev = "0.5.1"
linux-embedded-hal = "0.3.2"
